@@ -3,6 +3,9 @@ CHANGES-1.3.txt
 
 CHANGES IN CUPS V1.3.5
 
+	- lpmove didn't accept a job ID by itself.
+	- The scheduler incorrectly removed job history information
+	  for remote print jobs.
 	- The scheduler incorrectly sent the
 	  "com.apple.printerListChanged" message for printer state
 	  changes.
